--- a/web/style/layout.css
+++ b/web/style/layout.css
@@ -66,6 +66,7 @@
   }
 
   [layout~="content-frame"] {
+    width: 100%;
     max-width: 62ch;
 
     display: flex;
